# nvs_config

./: .gitignore  API.md  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml  nvs_config.c  nvs_config.h  param_table_example.inc  secure_level.c
.github/workflows/: build.yml
examples/array_example/: CMakeLists.txt  README.md
examples/array_example/main/: CMakeLists.txt  array_example_main.c  idf_component.yml  param_table.inc
examples/basic_usage/: CMakeLists.txt  README.md
examples/basic_usage/main/: CMakeLists.txt  basic_example_main.c  idf_component.yml  param_table.inc
examples/change_callbacks/: .gitignore  CMakeLists.txt  README.md
examples/change_callbacks/main/: CMakeLists.txt  change_callbacks_main.c  param_table.inc
examples/console_demo/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/console_demo/main/: CMakeLists.txt  console_demo_main.c  idf_component.yml  param_table.inc
examples/registry_iterator/: CMakeLists.txt  README.md
examples/registry_iterator/main/: CMakeLists.txt  param_table.inc  registry_iterator_main.c
examples/security_levels/: CMakeLists.txt  README.md
examples/security_levels/main/: CMakeLists.txt  param_table.inc  security_levels_main.c
examples/stress_test/: CMakeLists.txt
examples/stress_test/main/: CMakeLists.txt  stress_test_main.c
include/: nvs_config.h  nvs_config_console.h
src/: format.inc  nvs_config.c  nvs_config_console.c  secure_level.c
test/: CMakeLists.txt  README.md
test/main/: CMakeLists.txt  test_array.cpp  test_callbacks.cpp  test_console.cpp  test_edge_cases.cpp  test_framework.hpp  test_helpers.hpp  test_main.cpp  test_print.cpp  test_registry.cpp  test_scalar.cpp  test_security.cpp  test_versioning.cpp  test_wear_level.cpp
tests/: README.md  coverage_baseline.md
tests/hardware/: CMakeLists.txt
tests/hardware/main/: CMakeLists.txt  test_framework.hpp  test_helpers.hpp  test_main.cpp  test_thread_safety.cpp
tests/unit/: CMakeLists.txt  cpputest_compat.hpp  param_table.inc  run_unit_tests.sh  test_array.cpp  test_callbacks.cpp  test_console.cpp  test_edge_cases.cpp  test_groups.cpp  test_helpers.hpp  test_init_and_save.cpp  test_main.cpp  test_print.cpp  test_registry.cpp  test_scalar.cpp  test_security.cpp  test_versioning.cpp  test_wear_level.cpp
tests/unit/mocks/: esp_err.h  esp_log.h  mock_control.h  mock_impl.cpp  nvs.h  nvs_flash.h
tests/unit/mocks/esp_timer/: esp_timer.h
tests/unit/mocks/freertos/: FreeRTOS.h  semphr.h  timers.h
