idf_component_register(
    SRCS
        "test_main.cpp"
        "test_scalar.cpp"
        "test_array.cpp"
        "test_security.cpp"
        "test_print.cpp"
        "test_edge_cases.cpp"
        "test_registry.cpp"
        "test_thread_safety.cpp"
        "test_console.cpp"
        "test_callbacks.cpp"
        "test_wear_level.cpp"
        "test_versioning.cpp"
    INCLUDE_DIRS ".")
